# aristotle-whatsapp

./: .env.example  .gitignore  LICENSE  README.md  app.py  generic_chat.py  generic_news.py  gunicorn_config.py  instructions.txt  pyproject.toml
